assignment1/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'of'", "'readInteger'", "'readFloat'", 
                     "'readBoolean'", "'readString'", "'if'", "'else'", 
                     "'for'", "'while'", "'do'", "'break'", "'continue'", 
                     "'return'", "'printInteger'", "'writeFloat'", "'printBoolean'", 
                     "'printString'", "'super'", "'preventDefault'", "'function'", 
                     "'inherit'", "'out'", "','", "':'", "';'", "'='", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "<INVALID>", "'::'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "'{}'", "'boolean'", "'integer'", 
                     "'float'", "'string'", "'void'", "'auto'", "'array'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "FUNCKEYW", "INHERIT", "OUT", "COMMA", "COLON", "SEMICOLON", 
                      "EQUAL", "OPENCMT", "LINECMT", "PLUSOP", "MINUSOP", 
                      "MULTIPLYOP", "DIVIDEOP", "MODULOOP", "NEGATEOP", 
                      "CONJUNCOP", "DISJUNCOP", "RELATIONALOP", "STRINGCONCAT", 
                      "LB", "RB", "LSQB", "RSQB", "LCB", "RCB", "CB", "BOOLTYPE", 
                      "INTTYPE", "FLOATTYPE", "STRINGTYPE", "VOIDTYPE", 
                      "AUTOTYPE", "ARRAYTYPE", "INTLIT", "FLOATLIT", "BOOLEANLIT", 
                      "DOUBLEQUOTE", "STRINGLIT", "ID", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_shortvardecl = 4
    RULE_fulvardecl = 5
    RULE_arraydecl = 6
    RULE_idlist = 7
    RULE_exprlist = 8
    RULE_funcdecl = 9
    RULE_funcproto = 10
    RULE_funcbody = 11
    RULE_returntype = 12
    RULE_paralistdecl = 13
    RULE_paradecl = 14
    RULE_expr = 15
    RULE_indexop = 16
    RULE_sign = 17
    RULE_logical_negate = 18
    RULE_multiplying = 19
    RULE_adding = 20
    RULE_logical_and_or = 21
    RULE_relational = 22
    RULE_string = 23
    RULE_operand = 24
    RULE_const = 25
    RULE_var = 26
    RULE_funccall = 27
    RULE_arglist = 28
    RULE_arg = 29
    RULE_specialepxr = 30
    RULE_readint = 31
    RULE_readfloat = 32
    RULE_readbool = 33
    RULE_readstring = 34
    RULE_stmt = 35
    RULE_assignstmt = 36
    RULE_lhs = 37
    RULE_ifstmt = 38
    RULE_forstmt = 39
    RULE_whilestmt = 40
    RULE_dowhilestmt = 41
    RULE_breakstmt = 42
    RULE_continuestmt = 43
    RULE_returnstmt = 44
    RULE_callstmt = 45
    RULE_blockstmt = 46
    RULE_blockBody = 47
    RULE_specialstmt = 48
    RULE_printint = 49
    RULE_writefloat = 50
    RULE_printbool = 51
    RULE_printstring = 52
    RULE_superfunc = 53
    RULE_preventdef = 54
    RULE_vartype = 55
    RULE_array = 56

    ruleNames =  [ "program", "decls", "decl", "vardecl", "shortvardecl", 
                   "fulvardecl", "arraydecl", "idlist", "exprlist", "funcdecl", 
                   "funcproto", "funcbody", "returntype", "paralistdecl", 
                   "paradecl", "expr", "indexop", "sign", "logical_negate", 
                   "multiplying", "adding", "logical_and_or", "relational", 
                   "string", "operand", "const", "var", "funccall", "arglist", 
                   "arg", "specialepxr", "readint", "readfloat", "readbool", 
                   "readstring", "stmt", "assignstmt", "lhs", "ifstmt", 
                   "forstmt", "whilestmt", "dowhilestmt", "breakstmt", "continuestmt", 
                   "returnstmt", "callstmt", "blockstmt", "blockBody", "specialstmt", 
                   "printint", "writefloat", "printbool", "printstring", 
                   "superfunc", "preventdef", "vartype", "array" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    FUNCKEYW=20
    INHERIT=21
    OUT=22
    COMMA=23
    COLON=24
    SEMICOLON=25
    EQUAL=26
    OPENCMT=27
    LINECMT=28
    PLUSOP=29
    MINUSOP=30
    MULTIPLYOP=31
    DIVIDEOP=32
    MODULOOP=33
    NEGATEOP=34
    CONJUNCOP=35
    DISJUNCOP=36
    RELATIONALOP=37
    STRINGCONCAT=38
    LB=39
    RB=40
    LSQB=41
    RSQB=42
    LCB=43
    RCB=44
    CB=45
    BOOLTYPE=46
    INTTYPE=47
    FLOATTYPE=48
    STRINGTYPE=49
    VOIDTYPE=50
    AUTOTYPE=51
    ARRAYTYPE=52
    INTLIT=53
    FLOATLIT=54
    BOOLEANLIT=55
    DOUBLEQUOTE=56
    STRINGLIT=57
    ID=58
    WS=59
    ERROR_CHAR=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.ID:
                self.state = 114
                self.decls()


            self.state = 117
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.decl()
                self.state = 120
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def shortvardecl(self):
            return self.getTypedRuleContext(MT22Parser.ShortvardeclContext,0)


        def fulvardecl(self):
            return self.getTypedRuleContext(MT22Parser.FulvardeclContext,0)


        def arraydecl(self):
            return self.getTypedRuleContext(MT22Parser.ArraydeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 129
                self.shortvardecl()
                pass

            elif la_ == 2:
                self.state = 130
                self.fulvardecl()
                pass

            elif la_ == 3:
                self.state = 131
                self.arraydecl()
                pass


            self.state = 134
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortvardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_shortvardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortvardecl" ):
                return visitor.visitShortvardecl(self)
            else:
                return visitor.visitChildren(self)




    def shortvardecl(self):

        localctx = MT22Parser.ShortvardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_shortvardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.idlist()
            self.state = 137
            self.match(MT22Parser.COLON)
            self.state = 138
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FulvardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def var(self):
            return self.getTypedRuleContext(MT22Parser.VarContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def fulvardecl(self):
            return self.getTypedRuleContext(MT22Parser.FulvardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fulvardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFulvardecl" ):
                return visitor.visitFulvardecl(self)
            else:
                return visitor.visitChildren(self)




    def fulvardecl(self):

        localctx = MT22Parser.FulvardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fulvardecl)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MT22Parser.ID)
                self.state = 141
                self.match(MT22Parser.COLON)
                self.state = 142
                self.vartype()
                self.state = 143
                self.match(MT22Parser.EQUAL)
                self.state = 144
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.var()
                self.state = 147
                self.match(MT22Parser.COMMA)
                self.state = 148
                self.fulvardecl()
                self.state = 149
                self.match(MT22Parser.COMMA)
                self.state = 150
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ARRAYTYPE(self):
            return self.getToken(MT22Parser.ARRAYTYPE, 0)

        def LSQB(self):
            return self.getToken(MT22Parser.LSQB, 0)

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def RSQB(self):
            return self.getToken(MT22Parser.RSQB, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraydecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydecl" ):
                return visitor.visitArraydecl(self)
            else:
                return visitor.visitChildren(self)




    def arraydecl(self):

        localctx = MT22Parser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraydecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.idlist()
            self.state = 155
            self.match(MT22Parser.COLON)
            self.state = 156
            self.match(MT22Parser.ARRAYTYPE)
            self.state = 157
            self.match(MT22Parser.LSQB)
            self.state = 158
            self.match(MT22Parser.INTLIT)
            self.state = 159
            self.match(MT22Parser.RSQB)
            self.state = 160
            self.match(MT22Parser.T__0)
            self.state = 161
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(MT22Parser.ID)
                self.state = 164
                self.match(MT22Parser.COMMA)
                self.state = 165
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist" ):
                return visitor.visitExprlist(self)
            else:
                return visitor.visitChildren(self)




    def exprlist(self):

        localctx = MT22Parser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprlist)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.expr()
                self.state = 170
                self.match(MT22Parser.COMMA)
                self.state = 171
                self.exprlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcproto(self):
            return self.getTypedRuleContext(MT22Parser.FuncprotoContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(MT22Parser.FuncbodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.funcproto()
            self.state = 177
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncprotoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCKEYW(self):
            return self.getToken(MT22Parser.FUNCKEYW, 0)

        def returntype(self):
            return self.getTypedRuleContext(MT22Parser.ReturntypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def paralistdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParalistdeclContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcproto

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncproto" ):
                return visitor.visitFuncproto(self)
            else:
                return visitor.visitChildren(self)




    def funcproto(self):

        localctx = MT22Parser.FuncprotoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcproto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(MT22Parser.ID)
            self.state = 180
            self.match(MT22Parser.COLON)
            self.state = 181
            self.match(MT22Parser.FUNCKEYW)
            self.state = 182
            self.returntype()
            self.state = 183
            self.match(MT22Parser.LB)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INHERIT) | (1 << MT22Parser.OUT) | (1 << MT22Parser.ID))) != 0):
                self.state = 184
                self.paralistdecl()


            self.state = 187
            self.match(MT22Parser.RB)
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 188
                self.match(MT22Parser.INHERIT)
                self.state = 189
                self.match(MT22Parser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcbody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncbody" ):
                return visitor.visitFuncbody(self)
            else:
                return visitor.visitChildren(self)




    def funcbody(self):

        localctx = MT22Parser.FuncbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturntypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def VOIDTYPE(self):
            return self.getToken(MT22Parser.VOIDTYPE, 0)

        def AUTOTYPE(self):
            return self.getToken(MT22Parser.AUTOTYPE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_returntype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturntype" ):
                return visitor.visitReturntype(self)
            else:
                return visitor.visitChildren(self)




    def returntype(self):

        localctx = MT22Parser.ReturntypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returntype)
        try:
            self.state = 197
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLTYPE, MT22Parser.INTTYPE, MT22Parser.FLOATTYPE, MT22Parser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.vartype()
                pass
            elif token in [MT22Parser.VOIDTYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 195
                self.match(MT22Parser.VOIDTYPE)
                pass
            elif token in [MT22Parser.AUTOTYPE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 196
                self.match(MT22Parser.AUTOTYPE)
                pass
            else:
                raise NoViableAltException(self)
